--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Manager</title>
+    <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <h1>Todo App</h1>
         <form>
             <input type="text" placeholder="Enter a task...">
-            <button type="submit">Add</button>
+            <button type="submit">Add Task</button>
         </form>
         <ul id="todo-list"></ul>
     </div>
