index.html main.js main.ts style.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Todo App</h1>
+        <h1>Task Management</h1>
         <form>
             <input type="text" placeholder="Enter a task...">
             <button type="submit">Add Task</button>
